# EarningsWatch

./: .dockerignore  .gitignore  Makefile  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  entrypoint.sh  requirements.txt
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-04d34df995aa779efeb4dcba284d7c2b5cab68dbcc55f8a8f9a77752fd6a105d.json  query-04de5073c4a9b995c55227d7ebb7ca57cd8eaeeaf0e862d37bffbc4733274587.json  query-058d6df3121bfc99a8f19bd7e51aa48304b7b189e3f79e6badef1595209b45aa.json  query-0763c7fae5e4286875579fd56291ebb4dda9d0b7d222fb0f1c77f41f940f523d.json  query-0b2019beb4a4018ffef4e6ecb090afa5fba71a67fc4085c62689d61e3b216cc1.json  query-1160fefc5bffb69dbca56fcf57ee48aee43c896734c117e3e3c26a6e94c3b371.json  query-19d87461dfdd08bb0511546e9391a03dca4ccfe14085685a92788396d050051a.json  query-27e51d17659686396b2e6f778398bfb2146c4e3ce32618141f30d7f3c9dbd35e.json  query-2936079754823e55e25e4464322af5e908144ba2d4e0d4be1aa37d9aa3a21b06.json  query-2b8f2744cef8b8e9b99ecf7d9bb0756610dd6b93dca548ac4909056a05e8cd45.json  query-2c4d1ab6dc35c94b10ec6c2d90d271f2a5781a00a72497b6098ec050ab8a9d79.json  query-2f7c16ed9182f019c6ea501c04e8385b01653e2346aa3ce0837ca589e6f5a751.json  query-2f8a69c82e8a202f39b068a1d2829eaf4de8a89f821b01ad04bcdb7950c382df.json  query-3280e75fa822e49953ea710224c3dd699af83af556bf7cccd31ac867a2a91031.json  query-32d53687dc66a485956d49f4362f9f456d9fa4cf60603af22fef095e8a3a62f4.json  query-345f6271d9e65db6161cc503a9692df69447c962eec7d3343a419db3b695efd1.json  query-3542559e6da4da0005ae2d1f68e45ed2aa0737290c2bd4ad9a0fa3afc1e4c8e0.json  query-359ba594a21a0c4cfe08ea3b1478720e89a1c0febd0d168264c7619cad6cf6e8.json  query-3775689c2c3df369cafbb97f898ca9b12e00bba0707c3dcb1abc37831d811420.json  query-3bd5be20e9ba01eee4056253097c32cdba031754fc961e5114135d94bcceeea4.json  query-3de9fe5f988cb67bc18a4f4253696a4e8058ca9db8bfdaf4b7602dacb13c2643.json  query-47a2ae4ecace0de11352d822b8d7a4e050f9de0106bda7fc249ac0e5b67dfe96.json  query-486681a463d51ffbc254ff1aaefc8594183897ca71b536c6321a2e250fde546e.json  query-4904aa84bbcffbb28e51fdb77b234cca0a194143ee458cf64e6484061c08ab66.json  query-49aa9ce4ab4bb98f6cdfb67abe9612bc8752d7f297694f9d3a14c84c7ab671f9.json  query-4ad5011d4714bdb0c657883ddb84f73885d6658ce19bd0b2485c245e4ee1b4e1.json  query-4d94943a6affb4f7b9c357c6ae994a49f9bca363277a56dd41ef767838ec8be2.json  query-4e076b9cd0fd96f6fb820282008e24ff9e792604057cae6f3da0ee6e4e1830bb.json  query-50f67807ff5b6ca48d105cd8358d5613e5f2872fa635bf390a49cf54c8bd8066.json  query-52f5ce8f36f3b22ff2940de2609146ccd36c9e4aefe3c7531d45ec0f8a3af217.json  query-54da1ccef98a023d20ce60d067d9e760b528af64e7b7a42feb6d61b30f65b023.json  query-54ed9b8d57e05f84e342030e67c9a23d03e6e869be6343160fc61b7ced4347f1.json  query-567c0b6aced65abfc15b8fc420aa6e012abb6773a43d54d03588d9f403238d07.json  query-59afb1a406a12deb7c7678b217ff12323e11813bf0bfe4f06b6b5d63ddd1231c.json  query-5b89d656a1ea9ea652713462d08e481f1dcc696350b18618b5bc2e5c69e5a18d.json  query-62602da9b187cec4e10374cf409b061c261789160e7084e5297e20d1fc777640.json  query-693ffa681d42fff20847a1964e96d1df86753ad01d4596f25dcc0a2841e638d8.json  query-69a4c6eaceb0d3f14872b5bebdeedb6365a04212dc5a8cda44ecbd02626124ef.json  query-6a7d8baf5bbad40edfb97e51877fbcb949a45f81516884d80a47d3e4bdf0f589.json  query-6abb5ac65572f89cab89bf4ced53613bc325e76b22203209890dfb73809ab9d9.json  (+49 more)
backend/crates/api/: Cargo.toml
backend/crates/api/src/: cookie.rs  error.rs  extractor.rs  lib.rs  response.rs  router.rs  state.rs
backend/crates/api/src/handlers/: admin.rs  auth.rs  common.rs  dashboard.rs  earnings.rs  filter.rs  group.rs  health.rs  mod.rs  notify_history.rs  notify_queue.rs  page.rs
backend/crates/app/: Cargo.toml
backend/crates/app/src/: error.rs  lib.rs
backend/crates/app/src/admin/: admin_dashboard.rs  create_admin_user.rs  create_temp_user.rs  disable_user.rs  list_logs.rs  list_users.rs  mod.rs  notify_config.rs  (+1 more)
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: lib.rs  password.rs  refresh_token.rs  refresh_token_issuer.rs  role.rs  token.rs  user.rs
backend/crates/cli/: Cargo.toml
backend/crates/cli/src/: main.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: error.rs  lib.rs  loader.rs  setting.rs
backend/crates/content/: Cargo.toml
backend/crates/content/src/: lib.rs  page.rs
backend/crates/crypto/: Cargo.toml
backend/crates/crypto/src/: error.rs  lib.rs  models.rs
backend/crates/earnings/: Cargo.toml
backend/crates/earnings/src/: evaluation.rs  fingerprint.rs  lib.rs  record.rs  ticker.rs
backend/crates/identity/: Cargo.toml
backend/crates/identity/src/: lib.rs  macro_def.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: error_mapping.rs  lib.rs  pool.rs
backend/crates/logging/: Cargo.toml
backend/crates/logging/src/: entry.rs  lib.rs  memory_layer.rs  sql_layer.rs  visit.rs
backend/crates/notifier/: Cargo.toml
backend/crates/notifier/src/: lib.rs
backend/crates/repository/: Cargo.toml
backend/crates/repository/src/: earnings_repository.rs  error.rs  lib.rs  log_repository.rs  notify_filter_repository.rs  notify_group_repository.rs  notify_history_repository.rs  notify_queue_repository.rs  page_repository.rs  refresh_token_repository.rs  system_notify_config_repository.rs  system_run_repository.rs  unit_of_work.rs  user_repository.rs  user_settings_repository.rs
backend/crates/scraper/: Cargo.toml
backend/crates/scraper/src/: error.rs  lib.rs  traits.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: main.rs
backend/crates/subscription/: Cargo.toml
backend/crates/subscription/src/: filter.rs  group.rs  history.rs  lib.rs  medium.rs  queue.rs  system_notify_config.rs  user_settings.rs
backend/migrations/: 20260719085821_logging.sql  20260719085951_users.sql  20260719090014_refresh_tokens.sql  20260719090039_notify_settings.sql  20260719090107_earnings.sql  20260719090136_notify_queue.sql  20260719090157_notify_history.sql  20260719090216_system_runs.sql  20260719090244_system_notify_config.sql  20260719090302_pages.sql
(+135 files in other folders)
