[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# HTTP / async
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }

# serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error
thiserror = "1"

# log / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# time / id / hash
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"

# async trait
async-trait = "0.1"

# config
config = "0.14"
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# 暗号化(webhook_url等)
aes-gcm = "0.10"
base64 = "0.22"

# notifier
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# test
tempfile = "3"

# 対話的パスワード入力
rpassword = "7"

# カレンダーの日付やタイムゾーンを扱う(標準ライブラリとはちょっと違う)
time = "0.3"