# crates/api/Cargo.toml
[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
auth = { path = "../auth" }
identity = { path = "../identity" }
content = { path = "../content" }
repository = { path = "../repository" }
subscription = { path = "../subscription" }
earnings = { path = "../earnings" }
config = { path = "../config", package = "config-loader" }  # 命名回避策
logging = { path = "../logging" }

axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }