# crates/app/Cargo.toml
[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../auth" }
earnings = { path = "../earnings" }
subscription = { path = "../subscription" }
notifier = { path = "../notifier" }
scraper = { path = "../scraper" }
repository = { path = "../repository" }
identity = { path = "../identity" }
crypto = { path = "../crypto" }
config = { path = "../config", package = "config-loader" }  # 命名回避策
logging = { path = "../logging" }
content = { path = "../content" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

rust_xlsxwriter = { workspace = true }

rand = { workspace = true }