# crates/earnings/Cargo.toml
[package]
name = "earnings"
version = "0.1.0"
edition = "2024"

[dependencies]
identity = { path = "../identity" }

serde = { workspace = true }
chrono = { workspace = true }
# EarningsEvaluation/EarningsSource縺ｮsqlx::Type derive逕ｨ
sqlx = { workspace = true }
# fingerprint逕滓姝
sha2 = { workspace = true }