# crates/server/Cargo.toml
[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
app = { path = "../app" }
infra = { path = "../infra" }
config = { path = "../config", package = "config-loader" }  # 命名回避策
logging = { path = "../logging" }
repository = { path = "../repository" }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }